# Pulse-Vault

./: .cursorignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install_parrot.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
core/: crypto.py  vault.py
docs/: DOWNLOADS.md  THREAT_MODEL.md  VAULT_FORMAT.md
gui/: app.py  dialogs.py
packaging/linux/: application-x-pulsevault.xml  io.github.z3r0s.PulseVault.metainfo.xml  pulse-vault.desktop
src/pulsevault/: __init__.py  main.py
src/pulsevault/core/: __init__.py  crypto.py  vault.py
src/pulsevault/gui/: __init__.py  app.py  dialogs.py  theme.py
tests/: generate_vectors.py  test_crypto_fuzz.py  test_crypto_vectors.py  test_gui_smoke.py  test_gui_theme.py  test_kdf_persistence.py  test_vault_core.py  test_vault_extended.py  test_vault_perf.py  vault_fixtures.py
tests/vectors/: metadata_v3_fast.json  metadata_v3_standard.json  scrypt_fast.json  scrypt_standard.json  stream_v5_fast.json  stream_v5_standard.json
