[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-vault"
version = "5.1.0"
description = "Local-first encrypted file vault for Linux desktops."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "DNSPulse / Z3r0s" }
]
keywords = ["encryption", "vault", "privacy", "desktop", "linux", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]
dependencies = [
  "cryptography>=41.0.0",
  "customtkinter>=5.2.0",
  "tkinterdnd2>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Z3r0s/Pulse-Vault"
Repository = "https://github.com/Z3r0s/Pulse-Vault"
Issues = "https://github.com/Z3r0s/Pulse-Vault/issues"

[project.scripts]
pulse-vault = "pulsevault.main:main"
pulsevault = "pulsevault.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulsevault = ["assets/*"]
